--- a/frontend-task/products.css
+++ b/frontend-task/products.css
@@ -2,8 +2,10 @@ body {
     font-family: 'Roboto', 'Source Serif 4', sans-serif;
     font-size: 14px;
 }
+
 main {
     display: flex;
+    position: relative;
     align-items: center;
     flex-direction: column;
 }
