--- a/frontend-task/home.css
+++ b/frontend-task/home.css
@@ -2,17 +2,26 @@ body {
     font-family: 'Roboto', 'Source Serif 4', sans-serif;
     font-size: 14px;
 }
-
+header {
+    display: flex;
+    flex-direction: row;
+}
 nav {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 10px;
-    top: 0;
-    left: 0;
-    right: 0;
     z-index: 999;
+}
+
+.product-add-btn a {
+    font-weight: 500;
+    border: 1px solid #707070;
+    padding: 10px;
+    font-size: 14px;
+    color: #0D0D0D;
+    text-decoration: none;
 }
 
 .shopping-cart-button {
@@ -37,12 +46,12 @@ nav {
     display: none;
     margin-top: 20px;
     position: fixed;
-    right: calc(25% - 80px);
+    right: calc(25% - 85px);
     flex-direction: column;
     width: 360px;
     min-height: 100px;
     box-shadow: 0 5px 10px 0 #00000073;
-
+    background: #FFFFFF;
 }
 
 .cart-modal-triangle {
@@ -150,5 +159,5 @@ hr.solid {
     padding: 8px 0;
     background-color: #F9F9F9;
     border: 2px solid #BCBCBC;
+    cursor: pointer;
 }
-
