--- a/frontend-task/add-products.css
+++ b/frontend-task/add-products.css
@@ -23,7 +23,7 @@ main {
 
 .buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 10px;
     min-width: 20vh;
 }
